--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,42 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
   --foreground: #171717;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
     --foreground: #ededed;
   }
 }
 
 body {
-  background: var(--background);
+
+  background: #ededed ;
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Satoshi', sans-serif;
+
+}
+
+*{
+    padding: 0;
+    box-sizing: border-box;
+    -webkit-font-smoothing: antiliased;
+}
+
+a, p{
+    color: white;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 100%;
+}
+
+.page-content {
+    width: 100%;
+    height: 100%;
+    min-height: 100vh;
+    padding: 6em 2em;
 }
