--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,6 @@
   --foreground: #171717;
 }
 
-
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground: #ededed;
@@ -12,31 +11,48 @@
 }
 
 body {
-
-  background: #ededed ;
+  background: #ededed;
   color: var(--foreground);
-  font-family: 'Satoshi', sans-serif;
-
+  font-family: 'PT Sans', sans-serif; /* Changed from 'Satoshi' to 'PT Sans' */
 }
 
-*{
-    padding: 0;
-    box-sizing: border-box;
-    -webkit-font-smoothing: antiliased;
+* {
+  padding: 0;
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
 }
 
-a, p{
-    color: white;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 100%;
+a, p {
+  color: white;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 100%;
 }
 
 .page-content {
-    width: 100%;
-    height: 100%;
-    min-height: 100vh;
-    padding: 6em 2em;
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
+  padding: 6em 2em;
+}
+
+.cursor-container {
+  z-index: 9999 !important;
+}
+
+/* Disable scrolling for the body when the modal is open */
+body {
+  overflow: auto; /* Default behavior */
+}
+
+body.modal-open {
+  overflow: hidden; /* Disable scrolling */
+}
+
+/* Ensure the modal content is scrollable */
+.modal-content {
+  overflow-y: auto; /* Enable vertical scrolling */
+  max-height: 90vh; /* Limit the height to 90% of the viewport */
 }
